add about section

--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,19 @@
             </nav>
             <div class="regbtns">
                 <button class="login">Login</button>
-                <button class="signup">Sign up</button>
+                <button class="btn signup">Sign up</button>
             </div>
         </div>
     </header>
 
     <section class="about">
-        <div class="container">
+        <div class="container about__container">
             <h1 class="about__title">Awesome tools for Designer & Developer.</h1>
             <h2 class="about__subtitle">Antool is a web collection of information on paid or free Design and Development tools</h2>
-            <input type="search" placeholder="find more than 430+ tools...">
+            <div class="search-form">
+                <span class="about__search"><input type="search" placeholder="find more than 430+ tools..."></span>
+                <button class="btn search-form__btn">Search</button>
+            </div>
             <div class="socials">
                 <a class="socials__facebook" href="#" target="_blank"><img src="icons/facebook-icon.svg" alt="facebook icon" class="facebook"></a>
                 <a class="socials__instagram" href="#" target="_blank"><img src="icons/instagram-icon.svg" alt="instargam icon" class="instagram"></a>
