--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
                     <div class="app__footer">
                         <div class="app__footer_left">
                             <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
-                            <button class="toFolder"><img src="icons/addToFolder-icon.svg" alt="add to folder button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
@@ -87,7 +88,8 @@
                     <div class="app__footer">
                         <div class="app__footer_left">
                             <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
-                            <button class="toFolder"><img src="icons/addToFolder-icon.svg" alt="add to folder button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
@@ -104,7 +106,8 @@
                     <div class="app__footer">
                         <div class="app__footer_left">
                             <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
-                            <button class="toFolder"><img src="icons/addToFolder-icon.svg" alt="add to folder button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
@@ -121,7 +124,8 @@
                     <div class="app__footer">
                         <div class="app__footer_left">
                             <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
-                            <button class="toFolder"><img src="icons/addToFolder-icon.svg" alt="add to folder button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
@@ -138,7 +142,8 @@
                     <div class="app__footer">
                         <div class="app__footer_left">
                             <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
-                            <button class="toFolder"><img src="icons/addToFolder-icon.svg" alt="add to folder button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
@@ -155,11 +160,24 @@
                     <div class="app__footer">
                         <div class="app__footer_left">
                             <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
-                            <button class="toFolder"><img src="icons/addToFolder-icon.svg" alt="add to folder button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
                 </div>
+            </div>
+            <button class="loadmore">Load more</button>
+        </div>
+    </section>
+    <section class="brands">
+        <div class="container brands__container">
+            <div class="brands__title">Trusted more than 150+ brand</div>
+            <div class="brands__items">
+                <img src="img/logos/logos_microsoft.svg" alt="Microsoft logo" class="brands__item">
+                <img src="img/logos/logos_google.svg" alt="Google logo" class="brands__item">
+                <img src="img/logos/logos_slack.svg" alt="Slack logo" class="brands__item">
+                <img src="img/logos/logos_wordpress.svg" alt="WordPress logo" class="brands__item">
             </div>
         </div>
     </section>
