add newcomer section

--- a/src/index.html
+++ b/src/index.html
@@ -181,6 +181,90 @@
             </div>
         </div>
     </section>
+
+    <section class="newcomer">
+        <div class="container newcomer__container">
+            <div class="newcomer__text">
+                <div class="newcomer__title">Newcomer Tools</div>
+                <div class="newcomer__descr">Wow! see the latest update of the most recommended tools from reliable designers and developers</div>
+                <button class="btn newcomer__btn">Explore more</button>
+            </div>
+            <div class="apps newcomer__apps">
+                <div class="app__item">
+                    <div class="app__head">
+                        <img src="icons/zeplin-icon.svg" alt="zeplin icon" class="app__img">
+                        <div class="app__name">
+                            <div class="app__title">Zeplin</div>
+                            <div class="app__subtitle">Free & Paid</div>
+                        </div>
+                    </div>
+                    <div class="app__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="app__footer">
+                        <div class="app__footer_left">
+                            <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
+                        </div>
+                        <a href="figma.com" class="app__visit">Visit</a>
+                    </div>
+                </div>
+                <div class="app__item">
+                    <div class="app__head">
+                        <img src="icons/phpstorm-icon.svg" alt="phpStorm icon" class="app__img">
+                        <div class="app__name">
+                            <div class="app__title">PHPStorm</div>
+                            <div class="app__subtitle">Free</div>
+                        </div>
+                    </div>
+                    <div class="app__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="app__footer">
+                        <div class="app__footer_left">
+                            <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
+                        </div>
+                        <a href="figma.com" class="app__visit">Visit</a>
+                    </div>
+                </div>
+                <div class="app__item">
+                    <div class="app__head">
+                        <img src="icons/toolbox-icon.svg" alt="toolbox icon" class="app__img">
+                        <div class="app__name">
+                            <div class="app__title">Toolbox</div>
+                            <div class="app__subtitle">Free</div>
+                        </div>
+                    </div>
+                    <div class="app__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="app__footer">
+                        <div class="app__footer_left">
+                            <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
+                        </div>
+                        <a href="figma.com" class="app__visit">Visit</a>
+                    </div>
+                </div>
+                <div class="app__item">
+                    <div class="app__head">
+                        <img src="icons/procreate-icon.svg" alt="procreate icon" class="app__img">
+                        <div class="app__name">
+                            <div class="app__title">Procreate</div>
+                            <div class="app__subtitle">Paid</div>
+                        </div>
+                    </div>
+                    <div class="app__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="app__footer">
+                        <div class="app__footer_left">
+                            <button class="like"><img src="icons/like-icon.svg" alt="like button"></button>
+                            <button class="toFolder"><img src="icons/addToFolder-icon.svg"
+                                    alt="add to folder button"></button>
+                        </div>
+                        <a href="figma.com" class="app__visit">Visit</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
