add team section

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
             </div>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item">Home</li>
-                    <li class="nav__item">Categories</li>
-                    <li class="nav__item">My Collections</li>
-                    <li class="nav__item">Blog</li>
+                    <li class="nav__item"><a href="#">Home</a></li>
+                    <li class="nav__item"><a href="#">Categories</a></li>
+                    <li class="nav__item"><a href="#">My Collections</a></li>
+                    <li class="nav__item"><a href="#">Blog</a></li>
                 </ul>
             </nav>
             <div class="regbtns">
@@ -186,7 +186,8 @@
         <div class="container newcomer__container">
             <div class="newcomer__text">
                 <div class="newcomer__title">Newcomer Tools</div>
-                <div class="newcomer__descr">Wow! see the latest update of the most recommended tools from reliable designers and developers</div>
+                <div class="newcomer__descr">Wow! see the latest update of the most recommended tools from reliable
+                    designers and developers</div>
                 <button class="btn newcomer__btn">Explore more</button>
             </div>
             <div class="apps newcomer__apps">
@@ -261,6 +262,35 @@
                         </div>
                         <a href="figma.com" class="app__visit">Visit</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="team">
+        <div class="container">
+            <div class="slider">
+                <div class="slider__arrow">
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="slider__item">
+                    <div class="slider__content">
+                        <img src="img/productManager.png" alt="Product manager" class="slider__image">
+                        <div class="slider__text">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
+                            reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do
+                            deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex
+                            commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</div>
+                    </div>
+                </div>
+                <div class="slider__arrow slider__arrow_right">
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="slider__btns">
+                    <div class="slider__btn"></div>
+                    <div class="slider__btn"></div>
+                    <div class="slider__btn"></div>
                 </div>
             </div>
         </div>
