add contribution section

--- a/src/index.html
+++ b/src/index.html
@@ -295,6 +295,15 @@
             </div>
         </div>
     </section>
+
+    <section class="contribution">
+        <h2 class="contribution__title">Become a contributor?</h2>
+        <div class="contribution__descr">Join us and get tips & tricks to become a great Designer and Developer</div>
+        <div class="subscribe">
+            <input type="email" class="email" placeholder="Enter your email...">
+            <button class="btn">Join Us</button>
+        </div>
+    </section>
 </body>
 
 </html>
