--- a/src/index.html
+++ b/src/index.html
@@ -304,6 +304,37 @@
             <button class="btn">Join Us</button>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__info">
+            <div class="logo">
+                <img src="icons/Group 159.svg" alt="Antools logo" class="logo__image">
+                <div class="logo__text">antools.</div>
+            </div>
+            <div class="footer__copy">Copyright 2024. Antools</div>
+            <div class="footer__about">Antool is a web collection of information on paid or free Design and Development
+                tools</div>
+        </div>
+        <div class="footer__nav">
+            <ul class="footer__item">
+                <li class="footer__title">Contact Us</li>
+                <li class="footer__content"><a href="tel:+621987463">+621987463</a></li>
+                <li class="footer__content">M Building, No.10 A</li>
+                <li class="footer__content"><a href="mailto:antools@awesome.com" >antools@awesome.com</a></li>
+            </ul>
+            <ul class="footer__item">
+                <li class="footer__title"><a href="#">Categories</a></li>
+                <li class="footer__content"><a href="#">Design</a></li>
+                <li class="footer__content"><a href="#">Development</a></li>
+            </ul>
+            <ul class="footer__item">
+                <li class="footer__title"><a href="#">Company Info</a></li>
+                <li class="footer__content"><a href="#">About Us</a></li>
+                <li class="footer__content"><a href="#">Our Partners</a></li>
+                <li class="footer__content"><a href="#">Blog</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
