adaptation for phone  screens

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,11 @@
                 <button class="login">Login</button>
                 <button class="btn signup">Sign up</button>
             </div>
+            <div class="burger">
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+            </div>
         </div>
     </header>
 
@@ -301,7 +306,7 @@
         <div class="contribution__descr">Join us and get tips & tricks to become a great Designer and Developer</div>
         <div class="subscribe">
             <input type="email" class="email" placeholder="Enter your email...">
-            <button class="btn">Join Us</button>
+            <button class="btn subscribe__btn">Join Us</button>
         </div>
     </section>
 
@@ -320,7 +325,7 @@
                 <li class="footer__title">Contact Us</li>
                 <li class="footer__content"><a href="tel:+621987463">+621987463</a></li>
                 <li class="footer__content">M Building, No.10 A</li>
-                <li class="footer__content"><a href="mailto:antools@awesome.com" >antools@awesome.com</a></li>
+                <li class="footer__content"><a href="mailto:antools@awesome.com">antools@awesome.com</a></li>
             </ul>
             <ul class="footer__item">
                 <li class="footer__title"><a href="#">Categories</a></li>
@@ -335,6 +340,8 @@
             </ul>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
