add navigation for mobile devices

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <div class="container header__container">
             <div class="logo">
                 <img src="icons/Group 159.svg" alt="Antools logo" class="logo__image">
@@ -20,10 +20,10 @@
             </div>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#">Home</a></li>
-                    <li class="nav__item"><a href="#">Categories</a></li>
-                    <li class="nav__item"><a href="#">My Collections</a></li>
-                    <li class="nav__item"><a href="#">Blog</a></li>
+                    <li class="nav__item"><a href="#header">Home</a></li>
+                    <li class="nav__item"><a href="#tools">Categories</a></li>
+                    <li class="nav__item"><a href="#newcomer">My Collections</a></li>
+                    <li class="nav__item"><a href="#team">Blog</a></li>
                 </ul>
             </nav>
             <div class="regbtns">
@@ -36,6 +36,7 @@
                 <span class="burger__line"></span>
             </div>
         </div>
+        <div class="overlay"></div>
     </header>
 
     <section class="about">
@@ -58,7 +59,7 @@
         </div>
     </section>
 
-    <section class="tools">
+    <section class="tools" id="tools">
         <h2 class="tools__title">Most Popular Tools</h2>
         <p class="tools__subtitle">Tools for the best Designers and Developers most popularly used in the world</p>
         <div class="container">
@@ -187,7 +188,7 @@
         </div>
     </section>
 
-    <section class="newcomer">
+    <section class="newcomer" id="newcomer">
         <div class="container newcomer__container">
             <div class="newcomer__text">
                 <div class="newcomer__title">Newcomer Tools</div>
@@ -272,7 +273,7 @@
         </div>
     </section>
 
-    <section class="team">
+    <section class="team" id="team">
         <div class="container">
             <div class="slider">
                 <div class="slider__arrow">
