add script for slider

--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
     <section class="team" id="team">
         <div class="container">
             <div class="slider">
-                <div class="slider__arrow">
+                <div class="slider__arrow slider__arrow_right">
                     <span></span>
                     <span></span>
                 </div>
@@ -289,13 +289,26 @@
                             commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</div>
                     </div>
                 </div>
-                <div class="slider__arrow slider__arrow_right">
+                <div class="slider__item slider__item_active">
+                    <div class="slider__content">
+                        <img src="img/productManager.png" alt="Product manager" class="slider__image">
+                        <div class="slider__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi, corporis perferendis architecto repellendus quo a adipisci molestias at perspiciatis deserunt sint laudantium! Voluptate natus dolore alias debitis voluptatem quas?</div>
+                    </div>
+                </div>
+                <div class="slider__item">
+                    <div class="slider__content">
+                        <img src="img/productManager.png" alt="Product manager" class="slider__image">
+                        <div class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta modi illum adipisci beatae maiores? Voluptate, pariatur corrupti. Iure, aperiam facilis magnam maxime ab repellat eum aut id temporibus quasi earum.
+                        Repudiandae, odit labore deleniti tempora natus, in illum distinctio cum eligendi quas numquam. Eaque commodi repellat pariatur quam ex rerum hic, odit eum libero, nostrum ea nisi totam sequi doloribus!</div>
+                    </div>
+                </div>
+                <div class="slider__arrow slider__arrow_left">
                     <span></span>
                     <span></span>
                 </div>
                 <div class="slider__btns">
                     <div class="slider__btn"></div>
-                    <div class="slider__btn"></div>
+                    <div class="slider__btn slider__btn_active"></div>
                     <div class="slider__btn"></div>
                 </div>
             </div>
